--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <div class="container">
-      <h1 id="voc">Test1</h1>
-      <div id="furi">Test1</div>
+      <h1 id="voc"></h1>
+      <div id="furi"></div>
       <br />
-      <div id="meaning">Test1</div>
+      <div id="meaning"></div>
     </div>
     <footer>2023 N4 JLPT, Vicente Soto</footer>
     <script src="./script.js"></script>
